# rhythmi_temp

./: .gitignore  CLAUDE.md  README.md  claude.md  client_requirements_251107.md  data_1.md  pyproject.toml  vercel.json
.claude/: settings.local.json
backup/front_deprecated/: tailwind.config.js
backup/front_deprecated/src/: index.css
docs/: CLAUDE.md
docs/api/: LUCKYDRAW_API_PLAN.md  MVP_API_SPEC.md
docs/clients/: RHYTHMI.md  RYTHMI.md  SFS2025.md
docs/deployment/: LIGHTSAIL_DEPLOYMENT.md
docs/design/: DATA_FLOWS.md  DB_SCHEMA_SPEC.md  FORM_DATA.md  SURVEY_VIEWS.md  USER_FLOWS.md
docs/design/surveys/: test2_form_formdata.json
docs/features/: LUCKYDRAW.md
docs/product/: PRD.md  PRD_Korean.md
docs/screens/: 01_ONBOARDING.md  02_EVENT_CREATION.md  README.md
docs/testing/: E2E_TEST_REPORT.md  LOAD_TEST_PLAN.md
front/: CLAUDE.md  package-lock.json  package.json  playwright.config.js
front/src/app/: globals.css  layout.js  page.js
front/src/app/list/: page.js
front/src/app/login/: page.js
front/src/app/lottery/: layout.js  page.js
front/src/app/share/: page.js
front/src/app/test/1/: page.js
front/src/components/: AnimatedBackground.js  SlotDigit.js  SlotMachine.js
front/src/components/lottery/: AnimatedBackground.js  CardFlipDraw.jsx  CelebrationEffect.js  ConnectionStatusIndicator.js  ConsentForm.jsx  DecorativeElements.js  NetworkDraw.jsx  PersonalInfoForm.jsx  PrizeAnnouncementOverlay.js  SlotDigit.js  SlotMachine.js
front/src/components/luckydraw/: CardFlip.jsx  LayeredRNN3D.jsx  NetworkGraph3D.jsx  NumberScroller.jsx  RNNVisualization.jsx
front/src/components/ui/: button.js  use-mobile.js
front/src/contexts/: AuthContext.js  SurveyContext.js
front/src/data/: questions.js  resultData.js
front/src/hooks/: useLotterySocket.js
front/src/lib/: apiConfig.js
front/src/lib/api/: index.js  luckydraw.js
front/src/lib/lottery/: constants.js  index.js  utils.js
front/tests/e2e/: lottery-draw-flow.spec.js  lottery-edge-cases.spec.js  lottery-registration.spec.js  lottery-websocket.spec.js
front2/: package-lock.json  package.json
front2/src/contexts/: SurveyContext.js
lottery/: package-lock.json  package.json
lottery/app/: globals.css  layout.tsx  page.tsx
lottery/app/admin/: page.tsx
lottery/app/components/: AnimatedBackground.tsx  CelebrationEffect.tsx  QRRegistration.tsx  SlotDigit.tsx  SlotMachine.tsx
lottery/app/waiting/: page.tsx
server/: .env.example  .gitignore  .python-version  .vercelignore  CLAUDE.md  README.md  connection.py  main.py  main_test.py  pyproject.toml  railway.json  requirements.txt  test_ai_classifier.py  test_connection.py
server/api/: __init__.py  admins.py  events.py  forms.py  luckydraw.py  result_viewer.py  survey_analyzer.py
server/config/: __init__.py  ai_config.py
server/db/: connection.py  supabase_client.py
server/services/: __init__.py  ai_classifier.py  classifier.py  connection_manager.py  fallback_classifier.py  luckydraw_service.py
server/tests/: test_ai_classifier.py  test_ai_config.py  test_api.py  test_fallback_classifier.py  test_integration.py
server/tests/load/: README.md  full_scenario.py  http_test.py  memory_monitor.py  requirements.txt  test_server.py  websocket_test.py
server/tests/load/results/: full_test.json  small_test.json
(+30 files in other folders)
