[tool.poetry]
name = "eventmanager"
version = "0.1.0"
description = "Event Manager Application"
authors = ["Jeongu <jeongu@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.7.0"
anyio = "3.7.1"
bcrypt = "5.0.0"
cffi = "2.0.0"
click = "8.3.0"
cryptography = "46.0.3"
ecdsa = "0.19.1"
fastapi = "0.104.1"
h11 = "0.16.0"
idna = "3.11"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
psycopg2-binary = "2.9.11"
pyasn1 = "0.6.1"
pydantic = "2.12.3"
pydantic-core = "2.41.4"
python-dotenv = "1.1.1"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
python-multipart = "0.0.6"
rsa = "4.9.1"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.44"
starlette = "0.27.0"
typing-extensions = "4.15.0"
typing-inspection = "0.4.2"
uvicorn = "0.24.0.post1"
openai = "1.57.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"